lessons/280/3-ingress/1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: catalog
