lessons/280/3-ingress/2-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
spec:
  ingressClassName: external
  rules:
    - host: catalog.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: catalog
                port:
                  number: 8080
